# bot

bot_pod/: Dockerfile  Makefile  docker-compose.yml  gifts.session  login.py  pyproject.toml
bot_pod/app/: config.py  main.py  metrics.py
bot_pod/app/cron/: autobuyer.py
bot_pod/app/db/: queries.py  queries.sql  schema.sql
bot_pod/app/handlers/: admin.py  auto.py  autobuy_settings.py  balance.py  core.py  gifts.py  payments.py  settings.py  start.py  topup_custom.py
bot_pod/app/services/: autobuy_service.py  gift_mtproto.py  gift_service.py  stars.py  store_api.py  user_service.py
bot_pod/app/tests/: test_autobuyer.py  test_purchase.py  test_registration.py  test_stars.py
bot_pod/app/utils/: logging.py
bot_pod/data/: bot.db
